cmake_minimum_required(VERSION 3.0)

project(Essential-cpp-code)
set(CMAKE_CXX_STANDARD 11)
add_subdirectory(src/chapter0_other)
add_subdirectory(src/chapter1_basic)
add_subdirectory(src/chapter2_functional)
add_subdirectory(src/chapter3_generic)
add_subdirectory(src/chapter4_object_based)
add_subdirectory(src/chapter0_terminal)
add_subdirectory(src/chapter5_object_oriented)