add_executable(c_08_generic c_08_generic.cpp)
add_executable(c_09_iterator c_09_iterator.cpp)
add_executable(c_10_iterator c_10_iterator.cpp)
add_executable(c_11_linear_container c_11_linear_container.cpp)
add_executable(c_12_generic_algorithm c_12_generic_algorithm.cpp)
add_executable(c_13_desigin_a_filter c_13_desigin_a_filter.cpp)
add_executable(c_14_use_map c_14_use_map.cpp)
add_executable(c_15_iterator_inserter c_15_iterator_inserter.cpp)
add_executable(c_16_E_3_1 c_16_E_3_1.cpp)
add_executable(c_17_E_3_2 c_17_E_3_2.cpp)